# N.O.T.A.

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: ConfigDefine.cmake
src/: core.h  entry.cpp  entry.h  pch.h
src/platform/: CMakeLists.txt  init.c  init.cpp  init.h  internal.h  lib.h  window.c  window.cpp  window.h
src/platform/win32/: CMakeLists.txt  w_context.c  w_context.h  w_core.h  w_init.c  w_init.cpp  w_init.h  w_window.c  w_window.cpp  w_window.h
